--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,7 +46,7 @@
 	    </form>
 	  </div>
 	</nav>
-    <h1>Hello, world!</h1>
+    <h1>Welcome To Jin QnA!</h1>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="/webjars/jquery/3.4.1/jquery.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
