add email address input

--- a/src/main/resources/static/form.html
+++ b/src/main/resources/static/form.html
@@ -51,8 +51,7 @@
 	<form>
 	  <div class="form-group">
 	    <label for="userId">User ID</label>
-	    <input type="text" class="form-control" id="userId" placeholder = "Input here your ID" aria-describedby="userIdHelp">
-	    <small id="userIdHelp" class="form-text text-muted">We'll never share your User ID with anyone else.</small>
+	    <input type="text" class="form-control" id="userId" placeholder = "Input here your ID">
 	  </div>
 	  <div class="form-group">
 	    <label for="password">Password</label>
@@ -61,6 +60,11 @@
 	  <div class="form-group">
 	    <label for="name">Name</label>
 	    <input type="text" class="form-control" id="name" placeholder = "Input here your Name">
+	  </div>
+	  <div class="form-group">
+	    <label for="email">Email</label>
+	    <input type="email" class="form-control" id="email" placeholder = "Input here your Email" aria-describedby="emailHelp">
+	    <small id="emailHelp" class="form-text text-muted">We'll never share your Email Address with anyone else.</small>
 	  </div>
 	  <button type="submit" class="btn btn-primary">Submit</button>
 	</form>
