--- a/src/main/resources/static/form.html
+++ b/src/main/resources/static/form.html
@@ -51,7 +51,7 @@
 	</nav>
     <h1>Sign In</h1>
     <div class = "container">
-	<form action = "/create">
+	<form action = "/create" method="post">
 	  <div class="form-group">
 	    <label for="userId">User ID</label>
 	    <input type="text" class="form-control" name="userId" placeholder = "Input here your ID">
