nav /list  setting

--- a/src/main/resources/static/form.html
+++ b/src/main/resources/static/form.html
@@ -26,7 +26,7 @@
 	        <a class="nav-link" href="form.html">Sign In</a>
 	      </li>
 	      <li class="nav-item">
-	        <a class="nav-link" href="list.html">Customer List</a>
+	        <a class="nav-link" href="/list">Customer List</a>
 	      </li>
 	      <li class="nav-item dropdown">
 	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
